--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Build Geode Mod
 
 on:
   workflow_dispatch:
@@ -36,17 +36,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build the mod (Release)
+      - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          # build-config: RelWithDebInfo
-          # export-pdb: true
-          # bindings: RayDeeUx/bindings
-          # bindings-ref: "foobar"
           combine: true
+          sdk: nightly
+          cli: nightly
           target: ${{ matrix.config.target }}
-          cli: nightly # remove once iOS finishes
-          sdk: nightly # remove once iOS finishes
 
   package:
     name: Package builds
@@ -56,8 +52,6 @@ jobs:
     steps:
       - uses: geode-sdk/build-geode-mod/combine@main
         id: build
-        with:
-          cli: nightly # remove once iOS finishes
 
       - uses: actions/upload-artifact@v4
         with:
